umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0091_C1CCCCCCCCCCCCCCCCCC_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidWhitespace
    message: Invalid whitespace at position 38
opensmiles:
  success: false
  error:
    error_type: InvalidWhitespace
    message: Invalid whitespace at position 38
